# panel4

./: .gitignore  Panel4-api.py  Panel4b.py  README.md  pyproject.toml  text_corpus.csv
panel4/: Panel4-api.py  Panel4.py  cli.py  panel4_api.py
tests/: test_visitor.py
